hphp/hack/test/typecheck/new_inference/eager_solve/apply_with_invoke.php.like_types.exp
File "apply_with_invoke.php", line 15, characters 11-26:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "apply_with_invoke.php", line 16, characters 11-26:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
